Rewrite css for mobile first, #2 Now works great on mobile, some desktop fixes needed

--- a/master.css
+++ b/master.css
@@ -5,61 +5,65 @@
 }*/
 
 body {
-	background-color: #121212;
 	color: white;
+	background-color: #121212;
 	font-family: 'Open Sans', sans-serif;
 }
 
 .status {
-	position: absolute;
-	background-color: white;
-	color: black;
-	text-align: center;
-	font-style: italic;
-	width: 80%;
+	box-sizing: border-box;
 	height: 50px;
-	left: 10%;
-	border-bottom-left-radius: 20px;
-	border-bottom-right-radius: 20px;
+	padding: 15px 0;
+	text-align: center;
+}
+
+.status p {
+	margin: 0;
 }
 
 .table {
-	background: linear-gradient(to right, #4990E2 0%, #4990E2 50%, #FF3A3A 50%, #FF3A3A 100%);
-	width: 100%;
-	padding: 5%;
-	box-sizing: border-box;
-	display: flex;
-	justify-content: space-between;
-	margin: auto;
-}
-
-.half {
-	display: flex;
-}
-
-.mid {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	justify-content: space-between;
+	justify-content: space-around;
+	width: 100vw;
+	height: calc(100vh - 50px); /* 50px for status bar height */
+	background: linear-gradient(to bottom, #4990E2 0%, #4990E2 50%, #FF3A3A 50%, #FF3A3A 100%);
+}
+
+.cups {
+	display: flex;
+	flex-direction: column;
 }
 
 .row {
 	display: flex;
-	flex-direction: column;
 	justify-content: center;
 }
 
+/* http://www.mademyday.de/css-height-equals-width-with-pure-css.html */
+.squareRatio {
+	position: relative;
+	width: 9vh;
+	margin: 0 1vh;
+}
+
+.squareRatio::before {
+	display: block;
+	padding-top: 100%;
+	content: '';
+}
+
 .cup {
-	border: 3px solid white;
-	background: rgba(215, 215, 215, 0.7);
-	border-radius: 50%;
-	width: 60px;
-	height: 60px;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 	cursor: pointer;
-	margin: 5px 0;
 	color: white;
+	border: 3px solid white;
+	border-radius: 50%;
+	background: rgba(215, 215, 215, 0.7);
 }
 
 .cup.pending {
@@ -70,15 +74,23 @@ body {
 	visibility: hidden;
 }
 
-#missButton {
-	background-color: white;
-	border: none;
-	text-transform: uppercase;
-	font-weight: 500;
-	font-size: 25px;
-	border-radius: 999px;
-	padding: 10px 30px;
+.mid {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	text-align: center;
+}
+
+.missButton {
+	height: 40px;
+	padding: 0 30px;
 	cursor: pointer;
+	text-transform: uppercase;
+	border: none;
+	border-radius: 999px;
+	background-color: white;
+	font-size: 25px;
+	font-weight: 500;
 }
 
 .bounceToggler input[type=checkbox] {
@@ -86,28 +98,28 @@ body {
 }
 
 .bounceToggler {
+	position: relative;
 	width: 40px;
 	height: 40px;
-	position: relative;
 }
 
 .bounceToggler label {
-	cursor: pointer;
 	position: absolute;
+	top: 0;
+	left: 0;
 	width: 40px;
 	height: 40px;
-	top: 0;
-  	left: 0;
-	background: white;
-	border-radius: 10px;
+	cursor: pointer;
 	color: black;
+	border-radius: 10px;
+	background: white;
 }
 
 .bounceToggler label:after {
-	opacity: 0.2;
 	content: '×';
-	font-size: 35px;
+	opacity: 0.2;
 	background: transparent;
+	font-size: 35px;
 }
 
 .bounceToggler label:hover::after {
@@ -118,28 +130,33 @@ body {
 	opacity: 1;
 }
 
-/* Phantom element used in mid to center bounceToggler while missButton is pinned down */
+/* Hidden elements used for special cases of positioning, like in mid of table */
 .phantom {
-	height: 48px;
-	width: 121px;
+	visibility: hidden;
 }
 
-@media (orientation:portrait) and (max-width:736px) {
+
+@media (orientation:landscape) {
 	.table {
-		background: linear-gradient(to bottom, #4990E2 0%, #4990E2 50%, #FF3A3A 50%, #FF3A3A 100%);
-		box-sizing: border-box;
-		flex-direction: column;
-		align-items: center;
-		justify-content: space-between;
-		height: 100vh;
+		flex-direction: row;
+		background: linear-gradient(to right, #4990E2 0%, #4990E2 50%, #FF3A3A 50%, #FF3A3A 100%);
 	}
 
-	.half {
-		transform: rotate(90deg);
+	.cups {
+		flex-direction: row;
+	}
+
+	.row {
+		flex-direction: column;
+	}
+
+	/* http://www.mademyday.de/css-height-equals-width-with-pure-css.html */
+	.squareRatio {
+		width: 15vh;
+		margin: 1vh 0;
 	}
 
 	.mid {
-		flex-direction: row;
-		width: 100%;
+		flex-direction: column;
 	}
 }
